update style site

--- a/wp-content/themes/anphathungland/css/site.css
+++ b/wp-content/themes/anphathungland/css/site.css
@@ -33,45 +33,22 @@ hr.dashed{border-style:dashed;}
 
 /** Main Menu **/
 .navbar-main {position: sticky;box-shadow:0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);}
-.navbar-main .logo {height: 85px; transition: all 0.3s ease;}
-.navbar-main.fixed .logo {height: 35px;}
-.navbar-main .navbar-nav .nav-link {text-transform: uppercase; padding: 10px 15px; font-weight: 600;}
+.navbar-main .navbar-brand {padding: 0;}
+.navbar-main .logo {height: 45px; transition: all 0.3s ease;}
+.navbar-main .navbar-nav .nav-item {padding:0 5px;}
+.navbar-main .navbar-nav .nav-link {color:#333; text-transform: uppercase; padding: 17px 8px 3px; font-weight: 400; font-size: 16px;}
 .navbar-main .navbar-nav .nav-link:hover,
 .navbar-main .navbar-nav .nav-link:focus,
 .navbar-main .navbar-nav .nav-link.active{color:#36ace2;}
-.dropdown-menu {border-radius: 0; min-width: 200px; font-size: 14px;}
+.navbar-main .navbar-nav .dropdown-menu {border-radius: 0; min-width: 200px; font-size: 14px; box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);}
 .navbar-main .navbar-nav .nav-item:hover .dropdown-menu{display: block;}
-.dropdown-menu .dropdown-item {padding: 7px 16px; color:rgba(0,0,0,.5);}
+.navbar-main .navbar-nav .dropdown-menu .dropdown-item {padding: 7px 16px; color:rgba(0,0,0,.5);}
 @media all and (max-width: 991px) {
-  .navbar-main .logo {height:35px;}
-  .offcanvas-collapse {
-    position: fixed;
-    top: 61px;
-    bottom: 0;
-    left: 0;
-    width: 280px;
-    overflow-y: auto;
-    visibility: hidden;
-    background-color: #fff;
-    transition: left, visibility .3s ease-in-out;
-  }
-  .offcanvas-collapse.open {visibility: visible;}
-  .menu-overlay {
-    display: none;
-    background-color: #000;
-    bottom: 0;
-    left: 0;
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-    position: fixed;
-    right: 0;
-    top: 0;
-    z-index: 49;
-  }
-  .dropdown-menu {border-top:none; border-left:none; border-right: none; display:block; padding-top: 0;}
-}
-@media all and (min-width: 992px) {
-  .dropdown-menu {box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);}
+  .navbar-main .navbar-brand {margin: 0 auto;}
+  .offcanvas-collapse {position: fixed;top: 61px;bottom: 0;left: -285px;width: 280px;overflow-y: auto;background-color: #fff;transition: left .3s ease-in-out;  }
+  .offcanvas-collapse.open {display:block; left:0;}
+  .menu-overlay {display: none; background-color: #000;bottom: 0;left: 0;opacity: 0.5;filter: alpha(opacity=50);position: fixed;right: 0;top: 0;z-index: 1025;}
+  .navbar-main .navbar-nav .dropdown-menu {border-top:none; border-left:none; border-right: none; display:block; padding-top: 0; box-shadow: none;}
 }
 
 /** language bar **/
@@ -109,6 +86,15 @@ hr.dashed{border-style:dashed;}
 /* Banner */
 .banner-box {background: #f5f5f5;}
 .banner-box .banner-item {position: relative;}
+.banner-box .banner-item .blur-banner {content:''; position: absolute; top:0; bottom:0; width: 100%; left:0; background: #f5f5f5 center no-repeat; background-size: 100% auto; filter: blur(15px); z-index: 1;}
+.banner-box .banner-item .image {position: relative; z-index: 2;}
+.banner-box .absolute-box {position: absolute; left:0; right:0; bottom: 75px; z-index: 10;}
+.banner-box .absolute-box .container {position: relative; left:0; right:0;}
+.banner-box .absolute-box .content-box {background:rgba(34,71,94,0.6); color:#fff; margin: 0 -15px; padding: 20px 25px 30px; min-height: 210px; min-width: 400px; width: 50%; text-shadow: rgb(0, 0, 0) 1px 1px 0px;}
+.banner-box .absolute-box .description {font-size: 18px;}
+@media all and (max-width: 991px) {
+  .banner-box .absolute-box .content-box {margin: 0 auto; width: 100%;}
+}
 .banner-box .owl-stage .owl-item .image {height:480px; background-position: top center; background-repeat: no-repeat;background-size: auto 100%;}
 .banner-box .owl-dots {position: absolute; bottom: 10px; left: 0; right: 0;}
 .banner-box .owl-dots .owl-dot {outline: none;}
