--- a/wp-content/themes/anphathungland/css/site.css
+++ b/wp-content/themes/anphathungland/css/site.css
@@ -50,6 +50,7 @@ hr.dashed{border-style:dashed;}
   .menu-overlay {display: none; background-color: #000;bottom: 0;left: 0;opacity: 0.5;filter: alpha(opacity=50);position: fixed;right: 0;top: 0;z-index: 1025;}
   .navbar-main .navbar-nav .dropdown-menu {border-top:none; border-left:none; border-right: none; display:block; padding-top: 0; box-shadow: none;}
 }
+.navbar-collapse {flex-grow:0 !important;}
 
 /** language bar **/
 .langbar {float: right!important;margin: 5px 0px 2px 20px;}
