update logo login

--- a/wp-content/themes/anphathungland/css/login.css
+++ b/wp-content/themes/anphathungland/css/login.css
@@ -1,7 +1,7 @@
 body.login {background:#124964}
 
 #login h1 a {
-    background: url('http://localhost:90/bdsanphathungland/wp-content/themes/anphathungland/images/logo.jpg') no-repeat !important;
+    background: url('http://localhost:90/bdsanphathungland/wp-content/themes/anphathungland/images/logo-login.png') no-repeat !important;
 }
 
 .login #nav a, .login #backtoblog a {color:#fff!important;text-shadow:none;text-decoration:none}
