--- a/wp-content/themes/anphathungland/css/site.css
+++ b/wp-content/themes/anphathungland/css/site.css
@@ -3,7 +3,7 @@ body {position: relative;}
 body, pre{font-family: 'Open Sans', Roboto, Helvetica, sans-serif; font-size: 14px;}
 a{color:#333333;}
 a:focus, a:hover{text-decoration:none;color:#0b4da3;}
-ul{padding-left:20px;list-style: none;}
+ul{padding-left:20px;}
 hr{margin:40px 0;}
 hr.dashed{border-style:dashed;}
 
@@ -254,7 +254,7 @@ hr.dashed{border-style:dashed;}
 .footer-wrapper {position: relative;overflow: hidden;color: #444;}
 .footer-top {border-top: 3px solid #4496d2;box-shadow: 0 0 3px 0 #f3eeeb;background: #f4f4f4;border-bottom: 1px solid #e9e9e9;position: relative;padding-top: 10px;padding-bottom: 10px;}
 .footer-top ul {float: right;border: none;margin: 0;}
-.footer-top ul li {float: left;padding: 10px;border: none;font-size: 13px;}
+.footer-top ul li {float: left;padding: 10px;border: none;font-size: 13px;list-style: none;}
 .footer-top ul li:before {display:none;}
 .footer-top ul li a {padding: 6px 0px;}
 .footer-wrapper h3.widget-title {color: #4593f9;font-size: 20px;}
